--- a/index.html
+++ b/index.html
@@ -5,17 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styleEtch.css">
 </head>
 <body>
-    
-
+ 
     <div id="container">
         
     </div>
 
+<button id="button">Add Pixels</button>
 
     <script
     type="text/javascript" src="EtchScript.js">
+
 </script>
+
+
+
 </body>
 </html>
